--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     </p>
   </div>
   <p>
-    This button changes colours upon click, along with other various tricks, very mysterious.
+    This button changes colours upon click, along with other various tricks, though it only seems to work when it feels like it. Very mysterious.
   </p>
   <div class="style-as-button" id="myButton" >
   This is a button
