--- a/index.html
+++ b/index.html
@@ -233,13 +233,13 @@
     <li>Added an image asset to github repo</li>
     <li>Added the image from github repo to site</li>
     <li>Added site code to github repository</li>
+    <li>Hosted site on github</li>
     </ol>
     <p class="text-block">
       To-do
     </p>
   </div>
   <ol>
-    <li>Host your site on github</li>
     <li>Create a second page for your site in jsfiddle</li>
     <li>Add your second page to your github repo</li>
     <li>Fix your links between your pages</li>
