--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
 }
 
 #myImage {
-    width: 100%;
-    height: 50%;
+    padding: 0% 25%;
+    width: 50%;
+    height: 30%;
 }
 
 #column-container {
