--- a/index.html
+++ b/index.html
@@ -69,6 +69,55 @@
   <script id="insert"></script>
 
 
+    <script>
+      const customConsole = (w) => {
+        const pushToConsole = (payload, type) => {
+          w.parent.postMessage({
+            console: {
+              payload: payload,
+              type:    type
+            }
+          }, "*")
+        }
+
+        w.onerror = (message, url, line, column) => {
+          // the line needs to correspond with the editor panel
+          // unfortunately this number needs to be altered every time this view is changed
+          line = line - 79
+          if (line < 0){
+            pushToConsole(message, "error")
+          } else {
+            pushToConsole(`[${line}:${column}] ${message}`, "error")
+          }
+        }
+
+        w.console = (function(){
+          return {
+            log: (payload) => {
+              pushToConsole(payload, "log")
+            },
+            info: (payload) => {
+              pushToConsole(payload, "info")
+            },
+            warn: (payload) => {
+              pushToConsole(payload, "warn")
+            },
+            error: (payload) => {
+              pushToConsole(payload, "error")
+            },
+            system: (payload) => {
+              pushToConsole(payload, "system")
+            }
+          }
+        }())
+
+        console.system("Running fiddle")
+      }
+
+      if (window.parent){
+        customConsole(window)
+      }
+    </script>
 </head>
 <body>
     <!-- dic is a generic HTML element, meaning 'division', or 'divide' -->
@@ -158,7 +207,17 @@
   <div class="style-as-button" id="myButton" >
   This is a button
   </div>
-<!-- Section 4 -->
+  <!-- Section 4 -->
+<div>
+  <div class="text-border text-center">
+    <p class="text-block">
+      Second page
+    </p>
+  </div>
+  <p>
+  <a href="#" >A link to the second page! clicking on it is rather imperative to get to the new page since, as it stands now, it is the only link to it.</a>
+  </p>
+<!-- Section 5 -->
 <div>
   <div class="text-border text-center">
     <p class="text-block">
@@ -270,6 +329,22 @@ myButtonEl.addEventListener('click', ButtonClicked);
     window.name = "result"
   </script>
 
+    <script>
+      let allLines = []
+
+      window.addEventListener("message", (message) => {
+        if (message.data.console){
+          let insert = document.querySelector("#insert")
+          allLines.push(message.data.console.payload)
+          insert.innerHTML = allLines.join(";\r")
+
+          let result = eval.call(null, message.data.console.payload)
+          if (result !== undefined){
+            console.log(result)
+          }
+        }
+      })
+    </script>
 
 </body>
 </html>
