--- a/secondpage.html
+++ b/secondpage.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-  <title></title>
+  <title>Second Page</title>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta name="robots" content="noindex, nofollow">
   <meta name="googlebot" content="noindex, nofollow">
@@ -139,7 +139,7 @@ z-index:-1;
       </p>
     </div>
       <p>
-  <a href="#" >Here is your ticket back to the main page with actual stuff..</a>
+  <a href="index.html" >Here is your ticket back to the main page with actual stuff..</a>
   </p>
 
   <!-- TODO: Missing CoffeeScript 2 -->
