--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
     </p>
   </div>
   <p>
-  <a href="#" >A link to the second page! clicking on it is rather imperative to get to the new page since, as it stands now, it is the only link to it.</a>
+  <a href="secondpage.html" >A link to the second page! clicking on it is rather imperative to get to the new page since, as it stands now, it is the only link to it.</a>
   </p>
 <!-- Section 5 -->
 <div>
