--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 }
 
 #myImage {
-    padding: 0% 25%;
-    width: 50%;
-    height: 30%;
+  padding: 0% 25%;
+  width: 50%;
+  height: 30%;
 }
 
 #column-container {
@@ -54,16 +54,17 @@
 }
 
 .style-as-button {
-    background-color: #A89CB5;
-    width: 200px;
-    height: 20px;
-    padding: 16px;
-    border: solid 2px black;
-    float: none;
-    text-align: center;
-    border-radius: 40px;
-    color: white;
+  background-color: #A89CB5;
+  width: 200px;
+  height: 20px;
+  padding: 16px;
+  border: solid 2px black;
+  float: none;
+  text-align: center;
+  border-radius: 40px;
+  color: white;
 }
+
   </style>
 
   <script id="insert"></script>
@@ -121,7 +122,7 @@
 </head>
 <body>
     <!-- dic is a generic HTML element, meaning 'division', or 'divide' -->
-<div id ="page-container">
+<div id="page-container">
   <!-- h1 = header 1, the largest HTML heading tags, it would follow that h2, h3, h4 would be headers 2, 3, and 4 respectively, successively getting smaller -->
   <!-- Section 1 -->
   <h1 id="myHeading" class="text-center">
@@ -129,7 +130,7 @@
   </h1>
   <br>
   <div>
-      <img id="myImage" src="VKcover.png" >
+    <img id="myImage" src="VKcover.png">
   </div>
   <div>
     <div class="text-border">
@@ -140,7 +141,7 @@
     <!-- column-container will hold 4 columns -->
     <div id="column-container">
       <h2 class="text-center">
-      Neat Links
+        Neat Links
       </h2>
       <div class="columnsClass">
         <h4 class="text-center">
@@ -151,7 +152,7 @@
         <a href="https://jsfiddle.net/">JSFiddle</a>
         <br>
         <a href="https://google.com">Google</a>
-    </div>
+      </div>
       <div class="columnsClass">
         <h4 class="text-center">
           For problem solving
@@ -161,8 +162,8 @@
         <a href="https://www.w3schools.com/">W3Schools</a>
         <br>
         <a href="https://google.com">Google</a>
-    </div>
-    <div class="columnsClass">
+      </div>
+      <div class="columnsClass">
         <h4 class="text-center">
           For Learning
         </h4>
@@ -171,91 +172,93 @@
         <a href="https://www.w3schools.com/">W3schools</a>
         <br>
         <a href="https://google.com">Google</a>
-    </div>
-    <div class="columnsClass">
+      </div>
+      <div class="columnsClass">
         <h4 class="text-center">
-         For Fun
+          For Fun
         </h4>
         <a href="https://www.namecheap.com/">Namecheap Free logo maker</a>
         <br>
         <a href="https://google.com">Google</a>
+      </div>
     </div>
-  </div>
-  <!-- Section 2 -->
-<div>
-  <div class="text-border text-center">
-    <p class="text-block">
-      Big button of nothingness
-    </p>
-  </div>
-  <p>
-    This is a big button, but it doesn't actually do anything but lead to this same page. Or it would if the page itself actually existed-- how mysterious.
-  </p>
-  <div class="style-as-button">
-  <a href=".">This very page</a>
-  </div>
-  <!-- Section 3 -->
-<div>
-  <div class="text-border text-center">
-    <p class="text-block">
-      Second button
-    </p>
-  </div>
-  <p>
-    This button changes colours upon click, along with other various tricks, though it only seems to work when it feels like it. Very mysterious.
-  </p>
-  <div class="style-as-button" id="myButton" >
-  This is a button
-  </div>
-  <!-- Section 4 -->
-<div>
-  <div class="text-border text-center">
-    <p class="text-block">
-      Second page
-    </p>
-  </div>
-  <p>
-  <a href="secondpage.html" >A link to the second page! clicking on it is rather imperative to get to the new page since, as it stands now, it is the only link to it.</a>
-  </p>
-<!-- Section 5 -->
-<div>
-  <div class="text-border text-center">
-    <p class="text-block">
-      Challenges complete and learned!
-    </p>
-  </div>
-  <ol>
-    <li>Signed up for Github</li>
-    <li>Signed up for jsfiddle</li>
-    <li>Signed up for Free code camp</li>
-    <li>Completed 6 HTML problems</li>
-    <li>Completed 6 CSS problems</li>
-    <li>Completed 16 Javascript problems</li>
-    <li>Started webpage in jsfiddle</li>
-    <li>Added headings using the "h1" tag</li>
-    <li>Added some styes to headings using CSS</li>
-    <li>Added a "p" tags and wrote some text about site</li>
-    <li>Have colour palettes and add some colour</li>
-    <li>Created a menu which somewhat works</li>
-    <li>Created a free logo using <a href="https://www.namecheap.com/">Namecheap Free logo maker</a></li>
-    <li>Added some simple javascript: make a button that changes colour when clicked</li>
-    <li>Added an image to your page</li>
-    <li>Created a github repository for code</li>
-    <li>Added an image asset to github repo</li>
-    <li>Added the image from github repo to site</li>
-    <li>Added site code to github repository</li>
-    <li>Hosted site on github</li>
-    </ol>
-    <p class="text-block">
-      To-do
-    </p>
-  </div>
-  <ol>
-    <li>Create a second page for your site in jsfiddle</li>
-    <li>Add your second page to your github repo</li>
-    <li>Fix your links between your pages</li>
-    </ol>
-</div>
+    <!-- Section 2 -->
+    <div>
+      <div class="text-border text-center">
+        <p class="text-block">
+          Big button of nothingness
+        </p>
+      </div>
+      <p>
+        This is a big button, but it doesn't actually do anything but lead to this same page. Or it would if the page itself actually existed-- how mysterious.
+      </p>
+      <div class="style-as-button">
+        <a href=".">This very page</a>
+      </div>
+      <!-- Section 3 -->
+      <div>
+        <div class="text-border text-center">
+          <p class="text-block">
+            Second button
+          </p>
+        </div>
+        <p>
+          This button changes colours upon click, along with other various tricks, though it only seems to work when it feels like it. Very mysterious.
+        </p>
+        <div class="style-as-button" id="myButton">
+          This is a button
+        </div>
+        <!-- Section 4 -->
+        <div>
+          <div class="text-border text-center">
+            <p class="text-block">
+              Second page
+            </p>
+          </div>
+          <p>
+            <a href="secondpage.html">A link to the second page! clicking on it is rather imperative to get to the new page since, as it stands now, it is the only link to it.</a>
+          </p>
+          <!-- Section 5 -->
+          <div>
+            <div class="text-border text-center">
+              <p class="text-block">
+                Challenges complete and learned!
+              </p>
+            </div>
+            <ol>
+              <li>Signed up for Github</li>
+              <li>Signed up for jsfiddle</li>
+              <li>Signed up for Free code camp</li>
+              <li>Completed 6 HTML problems</li>
+              <li>Completed 6 CSS problems</li>
+              <li>Completed 16 Javascript problems</li>
+              <li>Started webpage in jsfiddle</li>
+              <li>Added headings using the "h1" tag</li>
+              <li>Added some styes to headings using CSS</li>
+              <li>Added a "p" tags and wrote some text about site</li>
+              <li>Have colour palettes and add some colour</li>
+              <li>Created a menu which somewhat works</li>
+              <li>Created a free logo using <a href="https://www.namecheap.com/">Namecheap Free logo maker</a></li>
+              <li>Added some simple javascript: make a button that changes colour when clicked</li>
+              <li>Added an image to your page</li>
+              <li>Created a github repository for code</li>
+              <li>Added an image asset to github repo</li>
+              <li>Added the image from github repo to site</li>
+              <li>Added site code to github repository</li>
+              <li>Hosted site on github</li>
+              <li>Created a second page in jsfiddle</li>
+              <li>Added second page to github repo</li>
+              <li>Fixed links between pages</li>
+            </ol>
+            <p class="text-block">
+              To-do
+            </p>
+          </div>
+          <ol>
+            <li>Nothing! (for now?)</li>
+          </ol>
+        </div>
+
 
   <!-- TODO: Missing CoffeeScript 2 -->
 
@@ -276,15 +279,15 @@ var myButtonEl = document.getElementById('myButton');
 var name = "";
 console.log("test");
 console.log(myButtonEl);
-var colourList = ["red","blue","green","yellow","pink"];
+var colourList = ["red", "blue", "green", "yellow", "pink"];
 var colourListIndex = 1;
 
 function ButtonClicked() {
-	colourListIndex = colourListIndex + 1;
-    if (colourListIndex == colourList.length) {
-    	colourListIndex = 0;
-    }
-    myButtonEl.style.backgroundColor = colourList[colourListIndex];
+  colourListIndex = colourListIndex + 1;
+  if (colourListIndex == colourList.length) {
+    colourListIndex = 0;
+  }
+  myButtonEl.style.backgroundColor = colourList[colourListIndex];
   // if statements ask a question that must resolve to true or false
   /* if (myButtonEl.style.backgroundColor == "blue") {
     myButtonEl.style.backgroundColor = "orange";
@@ -298,19 +301,6 @@ function ButtonClicked() {
   // background-color backgroundColor background_color
 }
 myButtonEl.addEventListener('click', ButtonClicked);
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
