--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         </p>
       </div>
       <p>
-        This is a big button, but it doesn't actually do anything but lead to this same page. Or it would if the page itself actually existed-- how mysterious.
+        This is a big button, but it doesn't actually do anything but lead to this same page-- how mysterious.
       </p>
       <div class="style-as-button">
         <a href=".">This very page</a>
