--- a/secondpage.html
+++ b/secondpage.html
@@ -17,62 +17,9 @@
   ></script>
 
     <link rel="stylesheet" type="text/css" href="/css/result-light.css">
+    <link rel="stylesheet" type="text/css" href="cssStyles.css">
 
 
-  <style id="compiled-css" type="text/css">
-      #myheading {
-  background-color: #9F79FF;
-}
-
-#myCanvas {
-position:absolute;
-top:0;
-left:0;
-width:100%;
-height:100%;
-z-index:-1;
-}
-
-#page-container {
-  background-color: #CCCCCC;
-}
-
-#myImage {
-    padding: 0% 25%;
-    width: 50%;
-    height: 30%;
-}
-
-#column-container {
-  height: 200px;
-}
-
-.text-border {
-  border: solid 4px #AA00A0;
-  background-color: #AACCAA;
-}
-
-.columnsClass {
-  float: left;
-  width: 25%;
-}
-
-.text-center {
-  text-align: center;
-  font-weight: bold;
-}
-
-.style-as-button {
-    background-color: #A89CB5;
-    width: 200px;
-    height: 20px;
-    padding: 16px;
-    border: solid 2px black;
-    float: none;
-    text-align: center;
-    border-radius: 40px;
-    color: white;
-}
   </style>
 
   <script id="insert"></script>
