--- a/index.html
+++ b/index.html
@@ -203,13 +203,14 @@
               <li>Created a second page in jsfiddle</li>
               <li>Added second page to github repo</li>
               <li>Fixed links between pages</li>
+              <li>Created a universal css file</li>
             </ol>
             <p class="text-block">
               To-do
             </p>
           </div>
           <ol>
-            <li>Nothing! (for now?)</li>
+            <li>Create a universal javascript file</li>
           </ol>
         </div>
 
