--- a/index.html
+++ b/index.html
@@ -92,50 +92,6 @@
         Greetings! This is a test site that also contains links for coding and learning to do so. Wonderful!
       </p>
     </div>
-    <!-- column-container will hold 4 columns -->
-    <div id="column-container">
-      <h2 class="text-center">
-        Neat Links
-      </h2>
-      <div class="columnsClass">
-        <h4 class="text-center">
-          For coding
-        </h4>
-        <a href="https://github.com/">Github</a>
-        <br>
-        <a href="https://jsfiddle.net/">JSFiddle</a>
-        <br>
-        <a href="https://google.com">Google</a>
-      </div>
-      <div class="columnsClass">
-        <h4 class="text-center">
-          For problem solving
-        </h4>
-        <a href="https://stackoverflow.com/">Stack Overflow</a>
-        <br>
-        <a href="https://www.w3schools.com/">W3Schools</a>
-        <br>
-        <a href="https://google.com">Google</a>
-      </div>
-      <div class="columnsClass">
-        <h4 class="text-center">
-          For Learning
-        </h4>
-        <a href="https://www.freecodecamp.org/">Free Code Camp</a>
-        <br>
-        <a href="https://www.w3schools.com/">W3schools</a>
-        <br>
-        <a href="https://google.com">Google</a>
-      </div>
-      <div class="columnsClass">
-        <h4 class="text-center">
-          For Fun
-        </h4>
-        <a href="https://www.namecheap.com/">Namecheap Free logo maker</a>
-        <br>
-        <a href="https://google.com">Google</a>
-      </div>
-    </div>
     <!-- Section 2 -->
     <div>
       <div class="text-border text-center">
@@ -213,6 +169,50 @@
             <li>Create a universal javascript file</li>
           </ol>
         </div>
+    <!-- Section 6 / column-container will hold 4 columns -->
+    <div id="column-container">
+      <h2 class="text-center">
+        Neat Links
+      </h2>
+      <div class="columnsClass">
+        <h4 class="text-center">
+          For coding
+        </h4>
+	<div class="vertical-menu">
+  	  <a href="https://github.com/">Github</a>
+  	  <a href="https://jsfiddle.net/">JSFiddle</a>
+  	  <a href="https://google.com">Google</a>
+	</div>
+      </div>
+      <div class="columnsClass">
+        <h4 class="text-center">
+          For problem solving
+        </h4>
+	<div class="vertical-menu">
+  	  <a href="https://stackoverflow.com/">Stack Overflow</a>
+  	  <a href="https://www.w3schools.com/">W3Schools</a>
+  	  <a href="https://google.com">Google</a>
+	</div>
+      </div>
+      <div class="columnsClass">
+        <h4 class="text-center">
+          For Learning
+        </h4>
+	<div class="vertical-menu">
+  	  <a href="https://www.freecodecamp.org/">Free Code Camp</a>
+  	  <a href="https://google.com">Google</a>
+	</div>
+      </div>
+      <div class="columnsClass">
+        <h4 class="text-center">
+          For Fun
+        </h4>
+	<div class="vertical-menu">
+ 	  <a href="https://www.namecheap.com/">Namecheap Free logo maker</a>
+ 	  <a href="https://google.com">Google</a>
+	</div>
+      </div>
+    </div>
 
 
   <!-- TODO: Missing CoffeeScript 2 -->
