--- a/index.html
+++ b/index.html
@@ -87,11 +87,6 @@
     <img id="myImage" src="VKcover.png">
   </div>
   <div>
-    <div class="text-border">
-      <p class="text-block">
-        Greetings! This is a test site that also contains links for coding and learning to do so. Wonderful!
-      </p>
-    </div>
     <!-- Section 2 -->
     <div>
       <div class="text-border text-center">
@@ -169,7 +164,13 @@
             <li>Create a universal javascript file</li>
           </ol>
         </div>
-    <!-- Section 6 / column-container will hold 4 columns -->
+    <!-- Section 6 -->
+    <div class="text-border">
+      <p class="text-block">
+        Greetings! This is a test site that also contains links for coding and learning to do so. Wonderful!
+      </p>
+    </div>
+    <!-- Section 7 / column-container will hold 4 columns -->
     <div id="column-container">
       <h2 class="text-center">
         Neat Links
@@ -213,6 +214,12 @@
 	</div>
       </div>
     </div>
+    <!-- Section 8 -->
+    <div class="text-border">
+      <p class="text-block">
+        End of page.
+      </p>
+   </div>
 
 
   <!-- TODO: Missing CoffeeScript 2 -->
